<resources>
    <string name="app_name">Presidente ou CU</string>
    <string name="deal_button">Deal</string>
    <string name="cpu_score">0</string>
    <string name="player_score">0</string>
    <string name="cpu">CPU</string>
    <string name="player">Player</string>
    <string name="anim">Default splash screen animation</string>
    <string name="singleplayer">Single Player</string>
    <string name="simpleplayer">Simple Player</string>
    <string name="someplayers">Multplayer Local</string>
    <string name="manyplayers">Multplayer Online</string>
    <string name="player_cards">Player cards</string>
    <string name="publisher">An xSallus Project </string>
    <string name="licensing">All rights reserved™</string>
</resources>
