<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_bkg"
    tools:context=".game.screens.SimplePlayer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/refresh_btn"
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:layout_marginStart="368dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/ic_replay" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="65dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/player_card"
                android:layout_width="156dp"
                android:layout_height="250dp"
                android:layout_marginEnd="14sp"
                android:background="@drawable/back_card" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/cpu_card"
                android:layout_width="156dp"
                android:layout_height="250dp"
                android:background="@drawable/back_card" />

        </LinearLayout>

        <Button
            android:id="@+id/deal_btn"
            android:layout_width="126sp"
            android:layout_height="45sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="66dp"
            android:background="@drawable/rounded_shape"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/deal_button"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="105dp">

            <LinearLayout
                android:id="@+id/player_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/player_scoreLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cpu_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="250dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cpu"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/cpu_scoreLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="viewEnd"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>